# multi-agent-rag-assistant

./: .editorconfig  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
api/: __init__.py  main.py
app/: __init__.py  main.py
core/: __init__.py  config.py  log.py
core/rag/: __init__.py  chunker.py  embeddings.py  indexer.py  parser.py  pipeline.py  retriever.py
tests/integration/: test_api_health.py
tests/unit/: test_config.py  test_sanity.py
tests/unit/core/: test_log.py
tests/unit/core/rag/: __init__.py  test_chunker.py  test_indexer.py  test_parser.py  test_retriever.py
